[gd_scene load_steps=15 format=2]

[ext_resource path="res://Sprite.gd" type="Script" id=1]
[ext_resource path="res://progress.png" type="Texture" id=2]
[ext_resource path="res://under.png" type="Texture" id=3]
[ext_resource path="res://bunker.png" type="Texture" id=4]
[ext_resource path="res://goalPost.png" type="Texture" id=5]
[ext_resource path="res://tree.png" type="Texture" id=6]
[ext_resource path="res://gravity_2d.shader" type="Shader" id=7]
[ext_resource path="res://wind_2d.shader" type="Shader" id=8]
[ext_resource path="res://fishing.png" type="Texture" id=9]
[ext_resource path="res://ButtonBack.gd" type="Script" id=10]
[ext_resource path="res://Node2D.gd" type="Script" id=11]

[sub_resource type="RectangleShape2D" id=1]

[sub_resource type="ShaderMaterial" id=2]
shader = ExtResource( 8 )
shader_param/speed = 4.0
shader_param/minStrength = 0.5
shader_param/maxStrength = 1.0
shader_param/strengthScale = 40.0
shader_param/interval = 2.0
shader_param/detail = 0.0
shader_param/distortion = 0.2
shader_param/heightOffset = 0.0
shader_param/direction = 3.0

[sub_resource type="ShaderMaterial" id=3]
shader = ExtResource( 7 )
shader_param/speed = 4.0
shader_param/minStrength = 0.5
shader_param/maxStrength = 1.0
shader_param/strengthScale = 40.0
shader_param/interval = 2.0
shader_param/detail = 0.0
shader_param/distortion = 0.2
shader_param/heightOffset = 0.0
shader_param/direction = 4.0

[node name="Node2D" type="Node2D"]
script = ExtResource( 11 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 100, 500 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 4 )
script = ExtResource( 1 )

[node name="Barrel" type="Position2D" parent="Sprite"]

[node name="TextureProgress" type="TextureProgress" parent="Sprite"]
margin_top = -50.0
margin_right = 100.0
margin_bottom = -35.0
rect_scale = Vector2( 5, 5 )
rect_pivot_offset = Vector2( 0, 7.5 )
max_value = 1000.0
texture_under = ExtResource( 3 )
texture_progress = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( 900, 250 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 5 )

[node name="Area2D" type="Area2D" parent="Sprite2"]
scale = Vector2( 25, 20 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite2/Area2D"]
shape = SubResource( 1 )

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = 400.0
margin_right = 600.0
margin_bottom = 50.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite3" type="Sprite" parent="."]
material = SubResource( 2 )
position = Vector2( 900, 500 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 6 )

[node name="Sprite4" type="Sprite" parent="."]
material = SubResource( 3 )
position = Vector2( 80, 200 )
scale = Vector2( -0.3, -0.3 )
texture = ExtResource( 9 )

[node name="Button" type="Button" parent="."]
margin_left = 10.0
margin_top = 10.0
margin_right = 60.0
margin_bottom = 30.0
rect_scale = Vector2( 2, 2 )
text = "<- Back"
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel2" type="RichTextLabel" parent="."]
margin_left = 870.0
margin_top = 10.0
margin_right = 940.0
margin_bottom = 50.0
rect_scale = Vector2( 2, 2 )
text = "Score: 0
Tries: 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel3" type="RichTextLabel" parent="."]
visible = false
margin_left = 100.0
margin_top = 200.0
margin_right = 140.0
margin_bottom = 215.0
rect_scale = Vector2( 20, 20 )
text = "GOAL"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button3" type="Button" parent="."]
margin_left = 990.0
margin_right = 1020.0
margin_bottom = 30.0
text = "X"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="area_entered" from="Sprite2/Area2D" to="Sprite" method="_on_Area2D_area_entered"]
[connection signal="pressed" from="Button" to="Button" method="_on_Button_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
